<resources>
    <string name="app_name">Instagram Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot"><font color='c4c4c4'>Forgot your login details?</font><b>Get help logging in.</b></string>

    <string name="sign_up"><font color='c4c4c4'>Dont have an account? </font><b>Sign up.</b></string>
    <string name="english">English</string>
    <string name="log_in">Log In</string>
    <string name="email_or_username">Email or username</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="arama">Arama</string>
    <string name="profil">Profil</string>
    <string name="ma_aza">Mağaza</string>
    <string name="reels">Reels</string>
    <string name="g_nderi">Gönderi</string>
    <string name="bildirimler">Bildirimler</string>
    <string name="mesajlar">Mesajlar</string>
</resources>